examples/test/testpolicy9449.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy9449
  namespace: namespace348
spec:
  podSelector:
    matchLabels:
      key28: value38
      key5: value10
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key44: value26
          key43: value44
          key14: value46
      podSelector:
        matchLabels:
          key44: value21
          key41: value11
